k8s/dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nginx-skaffold
  name: nginx-skaffold
  namespace: dev
spec:
  host: nginx-skaffold-dev.apps.c3smonkey.ch
  port:
    targetPort: 8080-8080
  to:
    kind: Service
    name: nginx-skaffold
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
      host: nginx-skaffold-dev.apps.c3smonkey.ch
      routerName: router
      wildcardPolicy: None
